re PR c++/57362 (unsupported __attribute__((target())) values appear to cause loop and/or pathological behavior)

PR 57362

	PR target/57362
	* config/i386/i386.c (dispatch_function_versions): Fix array
	indexing of function_version_info to match actual_versions.

	PR target/57362
	* g++.dg/ext/pr57362.C: New.

From-SVN: r200913